--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_secure_storage: ^6.1.0
   provider: ^6.0.4
   google_fonts: ^3.0.1
-  lottie: ^2.0.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/imgs/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
