--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   flutter_secure_storage: ^6.1.0
   provider: ^6.0.4
   google_fonts: ^3.0.1
-  
+  lottie: ^2.0.0
+  firebase_storage: ^11.0.7
+  image_picker: ^0.8.6
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
