--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.0.7
   image_picker: ^0.8.6
   shared_preferences: ^2.0.15
+  supabase_flutter: ^1.2.2
 
 dev_dependencies:
   flutter_test:
